# lumina-memory-system

./: .gitignore  .pre-commit-config.yaml  BRANCH_PUSH_SUMMARY.md  BRANCH_STATUS.md  CHANGELOG.md  CHANGELOG.md.bak  CLASS_ANALYSIS.md  CONSOLIDATION_COMPLETE.md  CURRENT_SESSION_STATUS.md  DEPENDENCIES.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_WORKFLOW.md  DIGITAL_CONSCIOUSNESS_READY.md  DIGITAL_CONSCIOUSNESS_VISION.md  FEATURE_HRR_VALIDATION.md  FEATURE_PYTORCH_GPU.md  FINAL_PRODUCTION_CONFIG.json  INSTALLATION.md  INTEGRATION_SUMMARY.md  M3_COMPLETION_REPORT.md  MEMORY_RELATIONSHIP_MAPPING.md  MISTRALLUMINA_CONTINUITY.md  NEXT_STEPS.md  PERFORMANCE_BENCHMARKS_SUMMARY.json  PRODUCTION_CONFIG_DOCUMENTATION.md  README.md  README_BRANCH_UPDATE.md  READ_FIRST.md  REPOSITORY_VISUAL_MAP.md  T001_T003_EXECUTION_SUMMARY.md  UNIFIED_CONSOLIDATION_PLAN.md  VERSION.md  VERSIONING_STRATEGY.md  XP_CORE_STATUS.md  complete_hrr_tuning_results.py  consciousness_persistence_clean.py  consciousness_persistence_diagnostic.py  consciousness_persistence_fix.py  create_mistrallumina_continuity_script.py  (+35 more)
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  kernel_change.md
.github/workflows/: auto_tag.yml  auto_tag_and_changelog.yml  auto_tag_xp_core.yml  auto_tag_xp_core.yml.disabled  ci.yml  required-checks.yml
.hypothesis/constants/: 00af8a9364da35d7  02eceb2fd2d826c2  041b82baf95116f0  084b040de1001ab9  0a174ab092bdf149  0c6ace7816a530f0  1683c7df689d3f07  1711dca7bbb78b0f  17306278c74a0b7f  196e25a3780a24a3  1a51c14370129ae1  1f78e9924d375ff1  24b63b5fc802a433  24dc8a630fd6f55b  25878421010898fc  2e90e9b833b51a7e  31722252d7529a88  319c88536c822e3a  32b05670edd550d5  384286760400e6b9  3c7e4d75c5a2196d  3d6d5fe500d6511c  3d723da5cd41cc99  43a12c56b1d568bc  4bf7fe19a5ce4096  4da25af2c8ac21da  54c7583226fe1340  550189fc2e7da520  5519860d4817d286  58c28e429cfe01ef  5962944738f3a08c  63a03e2160db2559  64c1a76eb2413ded  651359ef16bca5a1  6795acd58e4ca5e5  69f505b4b6a78a99  72a297844fdb3fc6  7791b0b57ea46b63  7b819f37f9413d6e  7ebfdc1d61592be0  (+48 more)
.hypothesis/examples/04e6b3400353b141/: 0ed7edbd3ca8df93  962c573db1198429
.hypothesis/examples/0ed7edbd3ca8df93/: 55deea13a67f9efb
.hypothesis/examples/962c573db1198429/: 101c9217751593c5  27d9dc47c4dba645  53d9bbf885c5f479  781bf2ef5bb5b340  91f63845a9eb1bde  9fa138b1100eb056  a92300e481eb9bb3  b67cdf3e41a719d0  bb7bb3209ce22c1a  e69e7aadb513afe2  fff179a7ad6dfa8b
.hypothesis/tmp/: tmp4747yyk5
.zencoder/rules/: repo.md
benchmarks/: gpu_performance_benchmark.py  hrr_performance.py
cli/: event_store_cli.py
consciousness_storage/: consciousness_registry.json
consciousness_storage/MistralLumina/: collective_stratum_manifest.json  consciousness_state_1755244444.2047853.json  identity_record.json  latest_state.json
data/sample/: README.md  ai_papers_sample.json  datasets.py
docs/: CANONICAL_MATH_REFERENCE.md  CLASS_ANALYSIS.md  CLASS_DEFINITION_ANALYSIS.md  CLEAN_NOTEBOOK_ARCHITECTURE.md  COMPLETE_CLASS_TREE.md  CROSS_NOTEBOOK_ANALYSIS.md  CRYPTOGRAPHIC_VERSIONING_ARCHITECTURE.md  HRR_SPECIFICATIONS.md  INCREMENTAL_INTEGRATION_PLAN.md  MEMORY_CONTRACT.md  UNIFIED_KERNEL_DESIGN_SPEC.md  VERSIONING.md
notebooks/: 01_setup.ipynb  02_quickstart.ipynb  03_benchmarks.ipynb  README.md  digital_consciousness_experiment.ipynb  digital_consciousness_local_llm.ipynb  hd_kernel_xp_spec.ipynb  hrr_spatial_environment_tuning.ipynb  hrr_validation_demo.ipynb  repo_state.json  unified_xp_core_complete.ipynb  unit_space_kernel_bridge.ipynb  xp_core_design.ipynb  xp_core_integration_complete.json
scripts/: auto_tag_and_push.ps1  auto_tag_branch_switch.ps1  bump_version.py  fix_notebook_encoding.py  merge_notebook_setup_to_all.ps1  merge_to_branches.ps1  migrate_embeddings.py  profile_retrieval.py  update_changelog.py
src/lumina_memory/: __init__.py  advanced_emotional_consciousness.py  analytics.py  bias_hygiene.py  class_registry.py  cli.py  config.py  consciousness_battery.py  constants.py  core.py  crypto_ids.py  deterministic_rebuild.py  digital_consciousness.py  embedding_versioning.py  embeddings.py  emotional_weighting.py  encryption.py  enhanced_emotional_weighting.py  eval.py  event_hashing.py  event_store.py  events.py  events_updated.py  gpu_optimized_config.py  hrr.py  kernel.py  local_llm_interface.py  math_foundation.py  memory_system.py  optimized_storage.py  pytorch_hrr_operations.py  routing.py  spatial_environment.py  spatial_memory_system.py  storage_integration.py  test_store.py  unified_foundation.py  utils.py  vector_store.py  versioned_xp_store.py  (+1 more)
tests/: conftest.py  run_m3_validation.py  run_m3_validation_fixed.py  test_analytics.py  test_config.py  test_crypto_ids.py  test_deterministic_rebuild.py  test_e2e_sample_dataset.py  test_embedding_versioning.py  test_encryption_roundtrip.py  test_event_chain.py  test_event_hashing.py  test_event_store.py  test_event_store_integration.py  test_filters.py  test_hrr_reference.py  test_hrr_validation.py  test_identity_integrity_rails.py  test_ids_and_dedup.py  test_kernel_integration.py  test_kernel_properties.py  test_m2_kernel_basic.py  test_memory_contract.py  test_memory_system.py  test_perf.py  test_roundtrip.py  test_smoke.py
tests/.hypothesis/constants/: 004e722d2b39195a  006b559781a41f7f  021ec22109a864fd  0588a2471da78b21  076b06f4d5bb5fd5  081fc6d6cf8bf54a  09ae28b390a241d0  100da2413d65b0b1  110a1d1d892c7388  118480740acbcd3c  11e12b17120b2c95  1272c7bb27015196  13efa0910df75e7a  173763bf5492a7c9  18baa06439e76d96  1a5326b88fdd03ad  1b03421aacbc7cd8  1d167b9ed984c052  1dc359315dc82348  1f2aa48f8b7ead1b  1f4b62403fde35c2  1fef50e9e1564f86  219385b4acf67710  2196e604560785f8  22aee50d81961c02  2445df8961183aa0  24fc5ae58208a25f  2d9ec6519674bc04  2f95c8527aa42db7  320031d770fca209  368f19d2cc26015d  370516b018e5bfaa  3d22539ae35a545a  3f8aaa63213ed9a5  42b0bc86aff197f0  47c07ff2426f12e8  49a432464b42767a  49feb446fd9d9c36  4f20d1a3e31a9d8c  50e280db548c04cd  (+125 more)
tests/tests/: test_m4_integration.py
